Quick notes + printing

--- a/outliers_handling.ipynb
+++ b/outliers_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -468,9 +468,7 @@
       "31      189.000179\n",
       "32      249.443696\n",
       "1086    136.400000\n",
-      "Name: pm2_5, dtype: float64\n",
-      "Before (8071, 80)\n",
-      "After (8001, 80)\n"
+      "Name: pm2_5, dtype: float64\n"
      ]
     }
    ],
@@ -502,6 +500,7 @@
     "    # Finding indexes of all outliers\n",
     "    indexes = []\n",
     "    cities_to_remove_outliers = [\"Lagos\", \"Nairobi\"]\n",
+    "    num_outliers = {city: 0 for city in cities_to_remove_outliers}\n",
     "    for city, params, in city_params.items():\n",
     "        if not city in cities_to_remove_outliers:\n",
     "            continue\n",
@@ -528,16 +527,40 @@
     "\n",
     "\n",
     "        indexes.extend(outliers[outliers == True].index)\n",
+    "        num_outliers[city] = outliers[outliers == True].shape[0]\n",
     "        print(\"City\", city, outliers[outliers == True].shape[0])\n",
     "        print()\n",
     "\n",
     "        print(city_data[outliers == True][\"pm2_5\"])\n",
     "\n",
-    "    return indexes\n",
+    "    return indexes, num_outliers\n",
     "\n",
-    "indexes = find_indexes_of_outliers(use_median=False, city_params=city_params)\n",
+    "indexes, num_outliers = find_indexes_of_outliers(use_median=False, city_params=city_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City: Lagos | Num outliers: 48\n",
+      "City: Nairobi | Num outliers: 22\n",
+      "Before (8071, 80)\n",
+      "After (8001, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Handling of outliers\n",
+    "for city, num_outlier in num_outliers.items():\n",
+    "    print(f\"City: {city} | Num outliers: {num_outlier}\")\n",
     "\n",
-    "# Simple dropping:\n",
+    "\n",
+    "# Simple dropping (Appears better than winsorization)\n",
     "print(\"Before\", train.shape)\n",
     "train = train.drop(index=indexes)\n",
     "print(\"After\", train.shape)"
@@ -545,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [
     {
@@ -689,6 +712,13 @@
    "source": [
     "# Scatter plot after processing\n",
     "plot_pm2_5_emissions_city_scatter()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seems to be more balanced (Nairobi should have more datapoints at higher pm2.5 emissions but its better than the starting point)"
    ]
   }
  ],
